--- a/src/InfoWoto.ServicoNotaAlunos.Worker/InfoWoto.ServicoNotaAlunos.Worker.csproj
+++ b/src/InfoWoto.ServicoNotaAlunos.Worker/InfoWoto.ServicoNotaAlunos.Worker.csproj
@@ -10,4 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InfoWoto.ServicoNotaAlunos.IOC\InfoWoto.ServicoNotaAlunos.IOC.csproj" />
+  </ItemGroup>
 </Project>
